--- a/src/core/component/grid/grid.scss
+++ b/src/core/component/grid/grid.scss
@@ -6,10 +6,6 @@
 // Grid [FRAMEWORK-][RAC+]
 .rac {
 
-  .rac-grid-wrapper {
-    overflow: auto;                                                                 /* @stable [11.09.2018] */
-  }
-
   .rac-layout-view-root {
 
     .rac-grid {
